2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Add a GZipStream decompress implementation.

2009-11-05  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* FileUtilities.cs: Fix eol.

2009-10-19  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Configuration.cs: Add GIT support.

2009-09-24  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs: When splitting stdout into lines don't split on
	neither tabs nor spaces.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Platform.cs: Added.
	* ProcessHelper.cs:
	* ProcessHelperLinux.cs:
	* ProcessHelperWindows.cs: Added support for specifying the platform
	and the child process algorithm (ps, pgrep) from the configuration.

	* MonkeyWrench.csproj: Updated.

	* Configuration.cs: Added Platform and ChildProcessAlgorithm.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelperMac.cs:
	* ProcessHelperLinux.cs: Add a ps implementation to get all child
	processes, and use kill to kill processes on mac too.

2009-09-22  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* ProcessHelper.cs:
	* ProcessHelperMac.cs:
	* ProcessHelperLinux.cs:
	* ProcessHelperWindows.cs: Split platform specific code into
	their own files. Implement Windows and Mac specific code.

	* MonkeyWrench.csproj: Updated.

2009-09-16  Andrew Jorgensen  <ajorgensen@novell.com>

	* ProcessHelper.cs: libc is in etc/mono/config

2009-07-28  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Async.cs: Added. Executes commands on the threadpool
	safely.

	* MonkeyWrench.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* MonkeyWrench.csproj: Updated.

	* Configuration.cs: Added support for SchedulerAccount and
	SchedulerPassword.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* Lock.cs: Added customizable locking algorithm.

	* Configuration.cs: Added configuration for LockingAlgorithm.

	* MonkeyWrench.csproj: Updated.

2009-07-23  Rolf Bjarne Kvinge  <RKvinge@novell.com>
